// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FilterSingle rendering applies active styling when filter is applied 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  position: relative;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c1 .eds-DropdownMenuButton-button {
  background-color: #E0F0F9;
  border: 1px solid #006296;
  color: #003A5A;
  font-weight: 600;
  border-radius: var(--border-radius);
  padding: 0 var(--spacing-1x);
}

.c1 .eds-DropdownMenuButton-button::before {
  color: #003A5A;
}

.c1 .eds-DropdownMenuButton-button::before {
  content: 'Status : ';
  font-weight: 400;
  margin-right: var(--spacing-half);
}

.c1 .eds-DropdownMenuButton-button:hover {
  background-color: #DBDEE1;
  border-color: #000000;
  color: #000000;
}

.c1 .eds-DropdownMenuButton-button:hover::before {
  color: #000000;
}

.c1 .eds-DropdownMenuButton-button .eds-DropdownMenuButton-expandIcon {
  color: #60666E;
}

<div>
  <div
    aria-label=""
    class="c0 c1"
    data-testid="dropdown-container"
    id="uuid2"
  >
    <button
      aria-controls="eds-uuid1"
      aria-expanded="false"
      class="c2 c3 c4 eds-DropdownMenuButton-button"
      data-testid="menu-button"
      type="button"
    >
      Option 1
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down c5"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`FilterSingle rendering renders button with label 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  position: relative;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c4 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c1 .eds-DropdownMenuButton-button {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  color: #60666E;
  font-weight: 400;
  border-radius: var(--border-radius);
  padding: 0 var(--spacing-1x);
}

.c1 .eds-DropdownMenuButton-button::before {
  color: #1B1C1E;
}

.c1 .eds-DropdownMenuButton-button:hover {
  background-color: #DBDEE1;
  border-color: #000000;
  color: #000000;
}

.c1 .eds-DropdownMenuButton-button:hover::before {
  color: #000000;
}

.c1 .eds-DropdownMenuButton-button .eds-DropdownMenuButton-expandIcon {
  color: #60666E;
}

<div>
  <div
    aria-label=""
    class="c0 c1"
    data-testid="dropdown-container"
    id="uuid2"
  >
    <button
      aria-controls="eds-uuid1"
      aria-expanded="false"
      class="c2 c3 c4 eds-DropdownMenuButton-button"
      data-testid="menu-button"
      type="button"
    >
      Status
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down c5"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;
